--- a/WebLucky_Serwer/Pages/Product/ProductUpsert.razor
+++ b/WebLucky_Serwer/Pages/Product/ProductUpsert.razor
@@ -1,65 +1,132 @@
 ﻿@page "/product/create"
 @page "/product/edit/{Id:int}"
+@inject ICategoryRepository _cr
 @inject IProductRepository _pr
 @inject NavigationManager _nm
-
-<EditForm Model="Product" OnValidSubmit="UpsertProduct">
-    <DataAnnotationsValidator />
-    <div class="mb-3">
-        <label class="form-label">Name</label>
-        <InputText class="form-control" @bind-Value="Product.Name" />
-        <ValidationMessage For="() => Product.Name" />
-    </div>
-    <div class="mb-3">
-        <label class="form-label">Color</label>
-        <InputText class="form-control" @bind-Value="Product.Color" />
-        <ValidationMessage For="() => Product.Color" />
-    </div>
-    <div class="mb-3">
-        <label class="form-label">Description</label>
-        <InputTextArea class="form-control" @bind-Value="Product.Description" />
-        <ValidationMessage For="() => Product.Description" />
-    </div>
-    <div class="row pt-3">
-        <div class="btn-group col-6">
-            <div class="form-check">
-                <InputCheckbox @bind-Value="Product.ShopFavorites" class="form-check-input" />
-                <label class="form-check-label">Is Shop Favorites</label>
+@inject IFileUpload _fileUpload
+@inject IJSRuntime _jsRuntime
+<div class="row m-2">
+    <div class="col-md-10 p-1">
+        <EditForm Model="Product" OnValidSubmit="UpsertProduct">
+            <DataAnnotationsValidator />
+            <div class="mb-3">
+                <label class="form-label">Name</label>
+                <InputText class="form-control" @bind-Value="Product.Name" />
+                <ValidationMessage For="() => Product.Name" />
             </div>
-        </div>
-        <div class="btn-group col-6">
-            <div class="form-check">
-                <InputCheckbox @bind-Value="Product.CustomerFavorites" class="form-check-input" />
-                <label class="form-check-label">Is Customer Favorites</label>
+            <div class="mb-3">
+                <label class="form-label">Color</label>
+                <InputText class="form-control" @bind-Value="Product.Color" />
+                <ValidationMessage For="() => Product.Color" />
             </div>
-        </div>
-    </div>
+            <div class="mb-3">
+                <label class="form-label">Description</label>
+                <InputTextArea class="form-control" @bind-Value="Product.Description" />
+                <ValidationMessage For="() => Product.Description" />
+            </div>
+            <div class="row pt-3">
+                <div class="btn-group col-6">
+                    <div class="form-check">
+                        <InputCheckbox @bind-Value="Product.ShopFavorites" class="form-check-input" />
+                        <label class="form-check-label">Is Shop Favorites</label>
+                    </div>
+                </div>
+                <div class="btn-group col-6">
+                    <div class="form-check">
+                        <InputCheckbox @bind-Value="Product.CustomerFavorites" class="form-check-input" />
+                        <label class="form-check-label">Is Customer Favorites</label>
+                    </div>
+                </div>
+                <div class="form-group col-6">
+                    <label>Category</label>
+                    <InputSelect @bind-Value="Product.CategoryId" class="form-select">
+                        <option value="0" disabled="disabled" selected>--Select Category--</option>
+                        @foreach (var cat in Categories)
+                        {
+                            <option value="@cat.Id">@cat.Name</option>
+                        }
 
-    <button type="submit" class="btn @(Title == "Create" ? "btn-primary" : "btn-danger")">@Title</button>
-    <NavLink href="product" class="btn btn-secondary">Back to Product</NavLink>
-</EditForm>
+                    </InputSelect>
+                    <ValidationMessage For="()=>Product.CategoryId"></ValidationMessage>
+                </div>
+                <div class="form-group col-6">
+                    <InputFile OnChange="HandleImageUpload" />
+                </div>
+            </div>
+
+            <button type="submit" class="btn @(Title == "Create" ? "btn-primary" : "btn-danger")">@Title</button>
+            <NavLink href="product" class="btn btn-secondary">Back to Product</NavLink>
+        </EditForm>
+    </div>
+    <div class="col-md-2 p-1">
+        <img src="@Product.ImageUrl" class="w-100 rounded-3">
+    </div>
+</div>
+
+
 
 @code {
     [Parameter]
     public int Id { get; set; }
     private int Count;
+    public string OldImageUrl { get; set; }
     private string Title { get; set; } = "Create";
 
     private ProductDTO Product { get; set; } = new ProductDTO();
     private IEnumerable<CategoryDTO> Categories { get; set; } = new List<CategoryDTO>();
 
-    private async Task UpsertProduct()
-    {
-        if (Id == 0) { await _pr.Create(Product); }
-        else { await _pr.Update(Product); }
-        _nm.NavigateTo("product");
-    }
     protected override async Task OnInitializedAsync()
     {
+        Categories = await _cr.GetAll();
         if (Id != 0)
         {
-            Product = await _pr.Get(Id);
             Title = "Update";
+            Product = await _pr.Get(Id);
+            OldImageUrl = Product.ImageUrl;
+        }
+    }
+    private async Task UpsertProduct()
+    {
+        if (Id == 0) 
+        {
+            await _pr.Create(Product); 
+            await _jsRuntime.ToastrSuccess("Product created successfully.");
+        }
+        else 
+        {
+            if (OldImageUrl != Product.ImageUrl)
+            {
+                _fileUpload.DeleteFile(OldImageUrl);
+            }
+            await _pr.Update(Product);
+            await _jsRuntime.ToastrSuccess("Product updated successfully.");
+        }
+        _nm.NavigateTo("product");
+    }
+    private async Task HandleImageUpload(InputFileChangeEventArgs e)
+    {
+        try
+        {
+            if (e.GetMultipleFiles().Count > 0)
+            {
+                foreach (var file in e.GetMultipleFiles())
+                {
+                    System.IO.FileInfo fileInfo = new System.IO.FileInfo(file.Name);
+                    if (fileInfo.Extension.ToLower() == ".jpg" || fileInfo.Extension.ToLower() == ".png" || fileInfo.Extension.ToLower() == ".jpeg")
+                    {
+                        Product.ImageUrl = await _fileUpload.UploadFile(file);
+                    }
+                    else
+                    {
+                        await _jsRuntime.ToastrError("Please select .jpg/.jpeg/.png file only");
+                        return;
+                    }
+                }
+            }
+        }
+        catch (Exception ex)
+        {
+            await _jsRuntime.ToastrError(ex.Message);
         }
     }
 }
