--- a/WebLucky_Serwer/Pages/Product/ProductList.razor
+++ b/WebLucky_Serwer/Pages/Product/ProductList.razor
@@ -1,52 +1,60 @@
 ﻿@page "/product"
+@inject IJSRuntime _jr
+@inject IFileUpload _fu
 @inject IProductRepository _pr
 
 @if (Products.Any())
 { 
     <div class="row m-2">
-    <div class="col-6">
-        <h4 class="card-title text-primary">Product List</h4>
-    </div>
-    <div class="col-4 offset-2">
-        <a href="product/create" class="btn btn-primary form-control">Add New Product </a>
-    </div>
-    <div>
-        <table class="table table-striped table-hover">
-            <thead>
-                <tr>
-                    <th>Name</th>
-                    <th>Shop Favorites</th>
-                    <th>Customer Favorites</th>
-                    <th>Category</th>
-                    <th>Actions</th>
-                </tr>
-            </thead>
-            <tbody>
-                @foreach (var item in Products)
-                {
+        <div class="col-6">
+            <h4 class="card-title text-primary">Product List</h4>
+        </div>
+        <div class="col-4 offset-2">
+            <a href="product/create" class="btn btn-primary form-control">Add New Product </a>
+        </div>
+        <div>
+            <table class="table table-striped table-hover">
+                <thead>
                     <tr>
-                        <td>@item.Name</td>
-                        <th>
-                            <input type="checkbox" disabled checked="@item.ShopFavorites">
-                        </th>
-                        <th>
-                            <input type="checkbox" disabled checked="@item.CustomerFavorites">
-                        </th>
-                        <th>
-                            @item.Category.Name
-                        </th>
-                        <td>
-                            <NavLink href="@($"product/edit/{item.Id}")" class="btn-primary btn">Edit</NavLink>
-                            <button class="btn btn-danger">Delete</button>
-                        </td>
+                        <th>Name</th>
+                        <th>Shop Favorites</th>
+                        <th>Customer Favorites</th>
+                        <th>Category</th>
+                        <th>ImageUrl</th>
+                        <th>Description</th>
+                        <th>Actions</th>
                     </tr>
-
-                }
-            </tbody>
-
-        </table>
+                </thead>
+                <tbody>
+                    @foreach (var item in Products)
+                    {
+                        <tr>
+                            <td>@item.Name</td>
+                            <th>
+                                <input type="checkbox" disabled checked="@item.ShopFavorites">
+                            </th>
+                            <th>
+                                <input type="checkbox" disabled checked="@item.CustomerFavorites">
+                            </th>
+                            <th>
+                                @item.Category.Name
+                            </th>
+                            <th>
+                            @if (!String.IsNullOrEmpty(item.ImageUrl)) { <img src="@item.ImageUrl" width="100px" /> }
+                            </th>
+                            <th>
+                                @item.Description
+                            </th>
+                            <td>
+                                <NavLink href="@($"product/edit/{item.Id}")" class="btn-primary btn">Edit</NavLink>
+                                <_DeleteConfirmation OnDeleteConfirm="@(()=>DeleteConfirm(item.Id))" />
+                            </td>
+                        </tr>
+                    }
+                </tbody>
+            </table>
+        </div>
     </div>
-</div>
 }
 else
 {
@@ -74,9 +82,10 @@ else
 }
 
 @code {
-    private IEnumerable<ProductDTO> Products { get; set; } = new List<ProductDTO>();
-    public bool IsLoading { get; set; } = true;
     public int deleteId { get; set; }
+    public bool IsLoading { get; set; } = true;
+
+    private IEnumerable<ProductDTO> Products { get; set; } = new List<ProductDTO>();
 
     protected override async Task OnAfterRenderAsync(bool firstRender)
     {
@@ -98,7 +107,10 @@ else
     {
         if (deleteId != 0)
         {
+            ProductDTO product = await _pr.Get(deleteId);
+            _fu.DeleteFile(product.ImageUrl);
             await _pr.Delete(deleteId);
+            await _jr.ToastrSuccess("Product Deleted successfully");
             await LoadProducts();
         }
     }
