--- a/WebLucky_Serwer/_Imports.razor
+++ b/WebLucky_Serwer/_Imports.razor
@@ -14,3 +14,5 @@
 @using WebLucky_Serwer.Helper
 @using Tangy_Models
 @using Tangy_Business.Repository.IRepository
+@using Syncfusion.Blazor
+@using Syncfusion.Blazor.RichTextEditor
