--- a/WebLucky_Serwer/Pages/Product/ProductUpsert.razor
+++ b/WebLucky_Serwer/Pages/Product/ProductUpsert.razor
@@ -22,7 +22,7 @@
             </div>
             <div class="mb-3">
                 <label class="form-label">Description</label>
-                <InputTextArea class="form-control" @bind-Value="Product.Description" />
+                <SfRichTextEditor class="form-control" @bind-Value="Product.Description" />
                 <ValidationMessage For="() => Product.Description" />
             </div>
             <div class="row pt-3">
