Add Syncfusion DataGrid

--- a/WebLucky_Serwer/Pages/Product/ProductPrice.razor
+++ b/WebLucky_Serwer/Pages/Product/ProductPrice.razor
@@ -34,8 +34,15 @@ else
             <img src="@Product.ImageUrl" class="w-100">
         </div>
     </div>
-}
+    <SfGrid DataSource="@ProductPrices" AllowPaging="true">
+        <GridColumns>
+            <GridColumn Field=@nameof(ProductPriceDTO.Id) HeaderText="ID" TextAlign="TextAlign.Right" Width="120"></GridColumn>
+            <GridColumn Field=@nameof(ProductPriceDTO.Size) HeaderText="Size" Width="150"></GridColumn>
+            <GridColumn Field=@nameof(ProductPriceDTO.Price) HeaderText="Price" Format="C2" TextAlign="TextAlign.Right" Width="130"></GridColumn>
+        </GridColumns>
+    </SfGrid>
 
+}
 
 @code {
     [Parameter]
