--- a/WebLucky_Serwer/_Imports.razor
+++ b/WebLucky_Serwer/_Imports.razor
@@ -16,3 +16,4 @@
 @using Tangy_Business.Repository.IRepository
 @using Syncfusion.Blazor
 @using Syncfusion.Blazor.RichTextEditor
+@using Syncfusion.Blazor.Grids
