--- a/WebLucky_Serwer/Pages/Product/ProductPrice.razor
+++ b/WebLucky_Serwer/Pages/Product/ProductPrice.razor
@@ -34,14 +34,16 @@ else
             <img src="@Product.ImageUrl" class="w-100">
         </div>
     </div>
-    <SfGrid DataSource="@ProductPrices" AllowPaging="true">
+    <SfGrid DataSource="@ProductPrices" AllowPaging="true" Toolbar="@(new List<string>() { "Add", "Edit", "Delete", "Update", "Cancel" })">
+        <GridEvents OnActionBegin="ActionBeginHandler" TValue="ProductPriceDTO"></GridEvents>
+        <GridEditSettings AllowAdding="true" AllowEditing="true" AllowDeleting="true"></GridEditSettings>
+        <GridEditSettings AllowAdding="true" AllowEditing="true" ShowDeleteConfirmDialog="true" AllowDeleting="true"></GridEditSettings>
         <GridColumns>
             <GridColumn Field=@nameof(ProductPriceDTO.Id) HeaderText="ID" TextAlign="TextAlign.Right" Width="120"></GridColumn>
             <GridColumn Field=@nameof(ProductPriceDTO.Size) HeaderText="Size" Width="150"></GridColumn>
             <GridColumn Field=@nameof(ProductPriceDTO.Price) HeaderText="Price" Format="C2" TextAlign="TextAlign.Right" Width="130"></GridColumn>
         </GridColumns>
     </SfGrid>
-
 }
 
 @code {
@@ -62,6 +64,15 @@ else
             ProductPrices = await _productPriceRepository.GetAll(Id);
             IsLoading = false;
             StateHasChanged();
+        }
+    }
+    public void ActionBeginHandler(ActionEventArgs<ProductPriceDTO> args)
+    {
+        if (args.RequestType.ToString() == "Add")
+        {
+        }
+        else
+        {
         }
     }
 }
