--- a/WebLucky_Client/Pages/Details.razor
+++ b/WebLucky_Client/Pages/Details.razor
@@ -9,7 +9,8 @@
 }
 else
 {
-    <form method="post">
+    <EditForm OnValidSubmit="AddToCart" Model="DetailsVM" method="post">
+        <DataAnnotationsValidator />
         <div class="card container mt-4">
             <div class="card-header ml-0  row">
                 <div class="col-12 col-md-6">
@@ -28,7 +29,7 @@ else
                             <div class="row">
                                 @foreach (var productPrice in Product.ProductPrices)
                                 {
-                                    if (productPrice.Id == DetailsVM.SelectedProductPriceId)
+                                    @* if (productPrice.Id == DetailsVM.SelectedProductPriceId)
                                     {
                                         <div class="col-2 bg-light text-center pt-2 m-2" style="border:3px solid #28A745; border-radius:10px;box-shadow:5px">
                                             <p>@productPrice.Size</p>
@@ -42,14 +43,26 @@ else
                                             <p>@productPrice.Size</p>
                                             <p>@productPrice.Price.ToString("c")</p>
                                         </div>
-                                    }
-                                }
-                                <div class="row pl-2">
-                                    <div class="col-2 text-primary"><h4>Count</h4></div>
-                                    <div class="col-10">
-                                        <input type="text" class="form-control" />
+                                    } *@
+                                    <div class="col-2 bg-light text-center pt-2 m-2" style="border:@(productPrice.Id == DetailsVM.SelectedProductPriceId ? "3px solid #28A745" : "1px solid"); border-radius:10px;box-shadow:5px;" @onclick="(args)=>SelectedProductPrice(args,productPrice.Id)">
+                                        <p>@productPrice.Size</p>
+                                        <p>@productPrice.Price.ToString("c")</p>
                                     </div>
-                                </div>
+                                }
+                                @if (!Product.ProductPrices.Any())
+                                {
+                                    <p class="text-warning">No Size available yet...</p>
+                                }
+                                else
+                                {
+                                    <div class="row pl-2">
+                                        <div class="col-2 text-primary"><h4>Count</h4></div>
+                                        <div class="col-10">
+                                            <InputNumber @bind-Value="DetailsVM.Count" class="form-control" />
+                                            <ValidationMessage For="()=>DetailsVM.Count"></ValidationMessage>
+                                        </div>
+                                    </div>
+                                }
                             </div>
                         </div>
                         <div class="col-2">
@@ -63,13 +76,20 @@ else
                             <a class="btn btn-success form-control " href="/">Back to Home</a>
                         </div>
                         <div class="col-12 col-md-6 pb-1">
-                            <button type="submit" value="Add to Cart" class="btn btn-primary form-control">Add to Cart</button>
+                            @if (DetailsVM.SelectedProductPriceId > 0)
+                            {
+                                <button type="submit" value="Add to Cart" class="btn btn-primary form-control">Add to Cart</button>
+                            }
+                            else
+                            {
+                                <button type="submit" value="Add to Cart" disabled class="btn btn-primary form-control">Add to Cart</button>
+                            }
                         </div>
                     </div>
                 </div>
             </div>
         </div>
-    </form>
+    </EditForm>
 }
 
 @code {
@@ -91,5 +111,8 @@ else
         DetailsVM.ProductPrice = Product.ProductPrices.FirstOrDefault(u => u.Id == productPriceId);
         DetailsVM.SelectedProductPriceId = productPriceId;
     }
+    private async Task AddToCart()
+    {
 
+    }
 }
