--- a/WebLucky_Client/Pages/Details.razor
+++ b/WebLucky_Client/Pages/Details.razor
@@ -1,5 +1,8 @@
 ﻿@page "/details/{ProductId:int}"
 @inject IProductService _productService
+@inject ICartService _cartService
+@inject NavigationManager _navigationManager
+@inject IJSRuntime _jsRuntime
 
 @if (IsProcessing)
 {
@@ -111,8 +114,16 @@ else
         DetailsVM.ProductPrice = Product.ProductPrices.FirstOrDefault(u => u.Id == productPriceId);
         DetailsVM.SelectedProductPriceId = productPriceId;
     }
-    private async Task AddToCart()
+    private async void AddToCart()
     {
-
+        ShoppingCart shoppingCart = new()
+        {
+            Count = DetailsVM.Count,
+            ProductId = ProductId,
+            ProductPriceId = DetailsVM.SelectedProductPriceId
+        };
+        await _cartService.IncrementCart(shoppingCart);
+        _navigationManager.NavigateTo("/");
+        await _jsRuntime.ToastrSuccess("Product added to cart successfully");
     }
 }
