--- a/WebLucky_Client/Pages/CartDetails/Cart.razor
+++ b/WebLucky_Client/Pages/CartDetails/Cart.razor
@@ -1,6 +1,7 @@
 ﻿@page "/cart"
 @inject ILocalStorageService _localStorage
 @inject IProductService _productService
+@inject ICartService _cartService
 
 @if (IsProcessing)
 {
@@ -39,7 +40,6 @@ else
                             </div>
                             <div class="col-9 text-sm-center text-md-start col-md-4 pt-lg-1 ">
                                 <h4><strong>@item.Product.Name</strong></h4>
-
                                 <div class="badge bg-primary text-center" style="font-size:12px;">
                                     @item.Product.Category.Name
                                 </div>
@@ -50,19 +50,18 @@ else
                             </div>
                             <div class="col-12 text-sm-center col-md-7 text-md-start row  pt-lg-3 mt-3">
                                 <div class="col-4 pt-1 ">
-
                                     <h6><strong>@item.ProductPrice.Price.ToString("c") <span class="text-muted">x</span> @item.Count </strong></h6>
                                 </div>
                                 <div class="col-6 col-sm-4 col-lg-6">
-                                    <button type="submit" class="btn btn-primary">
+                                    <button @onclick="()=>Increment(item.ProductId,item.ProductPriceId,1)" class="btn btn-primary">
                                         <i class="bi bi-plus-square"></i>
                                     </button>
-                                    <button type="submit" class="btn btn-warning">
+                                    <button @onclick="()=>Decrement(item.ProductId,item.ProductPriceId,1)" class="btn btn-warning">
                                         <i class="bi bi-dash-square"></i>
                                     </button>
                                 </div>
                                 <div class="col-2 col-sm-4 col-lg-2 text-right">
-                                    <button type="submit" class="btn btn-outline-danger">
+                                    <button @onclick="()=>Decrement(item.ProductId,item.ProductPriceId,0)" class="btn btn-outline-danger">
                                         <i class="bi bi-trash-fill"></i>
                                     </button>
                                 </div>
@@ -102,14 +101,43 @@ else
     protected override async Task OnInitializedAsync()
     {
         IsProcessing = true;
-        ShoppingCart = await _localStorage.GetItemAsync<List<ShoppingCart>>(SD.ShoppingCart);
         Products = await _productService.GetAll();
+        await LoadCart();
+        IsProcessing = false;
+    }
+    private async Task LoadCart()
+    {
+        OrderTotal = 0;
+        ShoppingCart = await _localStorage.GetItemAsync<List<ShoppingCart>>(SD.ShoppingCart);
         foreach (var cart in ShoppingCart)
         {
             cart.Product = Products.FirstOrDefault(u => u.Id == cart.ProductId);
             cart.ProductPrice = cart.Product.ProductPrices.FirstOrDefault(u => u.Id == cart.ProductPriceId);
             OrderTotal += (cart.ProductPrice.Price * cart.Count);
         }
+    }
+    private async Task Increment(int ProductId, int ProductPriceId, int Count)
+    {
+        IsProcessing = true;
+        await _cartService.IncrementCart(new()
+        {
+            Count = Count,
+            ProductId = ProductId,
+            ProductPriceId = ProductPriceId
+        });
+        await LoadCart();
+        IsProcessing = false;
+    }
+    private async Task Decrement(int ProductId, int ProductPriceId, int Count)
+    {
+        IsProcessing = true;
+        await _cartService.DecrementCart(new()
+        {
+            Count = Count,
+            ProductId = ProductId,
+            ProductPriceId = ProductPriceId
+        });
+        await LoadCart();
         IsProcessing = false;
     }
 }
