--- a/WebLucky_Client/Shared/NavMenu.razor
+++ b/WebLucky_Client/Shared/NavMenu.razor
@@ -1,4 +1,6 @@
-﻿<nav class="navbar navbar-expand-lg navbar-dark bg-dark">
+﻿@inject ISyncLocalStorageService _localStorage
+
+<nav class="navbar navbar-expand-lg navbar-dark bg-dark">
     <div class="container-fluid">
         <a class="navbar-brand" href="#">Tangy</a>
         <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
@@ -13,7 +15,7 @@
                 </li>
                 <li class="nav-item p-0">
                     <NavLink class="nav-link" href="/cart">
-                        <span class="p-2">Cart</span>
+                        <span class="p-2"><i class="bi bi-cart"></i> (@GetCartCount())</span>
                     </NavLink>
                 </li>
             </ul>
@@ -39,14 +41,11 @@
     </div>
 </nav>
 
-
-@code {
-    private bool collapseNavMenu = true;
-
-    private string? NavMenuCssClass => collapseNavMenu ? "collapse" : null;
-
-    private void ToggleNavMenu()
+@code
+{
+    private int GetCartCount()
     {
-        collapseNavMenu = !collapseNavMenu;
+        var cart = _localStorage.GetItem<List<ShoppingCart>>(SD.ShoppingCart);
+        return cart == null ? 0 : cart.Count;
     }
 }
