--- a/WebLucky_Client/Shared/NavMenu.razor
+++ b/WebLucky_Client/Shared/NavMenu.razor
@@ -1,4 +1,6 @@
 ﻿@inject ISyncLocalStorageService _localStorage
+@inject ICartService _cartService
+@implements IDisposable
 
 <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
     <div class="container-fluid">
@@ -43,9 +45,18 @@
 
 @code
 {
-    private int GetCartCount()
+    protected override void OnInitialized()
+    {
+        _cartService.OnChange += StateHasChanged;
+    }
+    public void Dispose() //เมื่อออกจากคอมโพเน้นต์ ให้ยกเลิกเหตการณ์
+    {
+        _cartService.OnChange -= StateHasChanged;
+    }
+
+    private string GetCartCount()
     {
         var cart = _localStorage.GetItem<List<ShoppingCart>>(SD.ShoppingCart);
-        return cart == null ? 0 : cart.Count;
+        return cart == null ? "0" : $"มีสินค้า {cart.Count} รายการ | จำนวน {cart.Sum(s => s.Count)} ชิ้น";
     }
 }
