--- a/WebLucky_Serwer/Pages/Product/ProductList.razor
+++ b/WebLucky_Serwer/Pages/Product/ProductList.razor
@@ -1,6 +1,7 @@
 ﻿@page "/product"
 @inject IFileUpload _fu
 @inject IProductRepository _pr
+@attribute [Authorize]
 
 <ToastMudComponent Open="@Open" Message="@Message" Toggle="@Toggle" />
 @if (Products.Any())
