--- a/WebLucky_Serwer/Shared/NavMenu.razor
+++ b/WebLucky_Serwer/Shared/NavMenu.razor
@@ -84,6 +84,11 @@
                 <span class="oi oi-list-rich" aria-hidden="true"></span> Product
             </NavLink>
         </div>
+        <div class="nav-item px-3">
+            <NavLink class="nav-link" href="/role">
+                <span class="oi oi-list-rich" aria-hidden="true"></span> Role
+            </NavLink>
+        </div>
     </nav>
 </div>
 
