--- a/WebLucky_Serwer/Shared/NavMenu.razor
+++ b/WebLucky_Serwer/Shared/NavMenu.razor
@@ -75,26 +75,28 @@
             </NavLink>
         </div>
         <div class="nav-item px-3">
-            <NavLink class="nav-link" href="/category">
-                <span class="oi oi-list-rich" aria-hidden="true"></span> Category
-            </NavLink>
-        </div>
-        <div class="nav-item px-3">
-            <NavLink class="nav-link" href="/product">
-                <span class="oi oi-list-rich" aria-hidden="true"></span> Product
-            </NavLink>
-        </div>
-        <div class="nav-item px-3">
             <NavLink class="nav-link" href="/role">
                 <span class="oi oi-list-rich" aria-hidden="true"></span> Role
             </NavLink>
         </div>
+        <AuthorizeView Roles="@roleAdmin">
+            <div class="nav-item px-3">
+                <NavLink class="nav-link" href="/category">
+                    <span class="oi oi-list-rich" aria-hidden="true"></span> Category
+                </NavLink>
+            </div>
+            <div class="nav-item px-3">
+                <NavLink class="nav-link" href="/product">
+                    <span class="oi oi-list-rich" aria-hidden="true"></span> Product
+                </NavLink>
+            </div>
+        </AuthorizeView>
     </nav>
 </div>
 
 @code {
     private bool collapseNavMenu = true;
-
+    private string roleAdmin = Tangy_Common.SD.Role_Admin;
     private string? NavMenuCssClass => collapseNavMenu ? "collapse" : null;
 
     private void ToggleNavMenu()
