Client : Login and Logout in Action

--- a/WebLucky_Client/Pages/CartDetails/Summary.razor
+++ b/WebLucky_Client/Pages/CartDetails/Summary.razor
@@ -2,6 +2,7 @@
 @inject IJSRuntime _jsRuntime
 @inject ILocalStorageService _localStorage
 @inject IProductService _productService
+@attribute [Authorize]
 
 @if (IsProcessing)
 {
