--- a/WebLucky_Client/_Imports.razor
+++ b/WebLucky_Client/_Imports.razor
@@ -13,3 +13,5 @@
 @using WebLucky_Client.Helper
 @using Blazored.LocalStorage
 @using Tangy_Common
+@using Microsoft.AspNetCore.Components.Authorization
+@using Microsoft.AspNetCore.Authorization
