Redirect to Login

--- a/WebLucky_Client/App.razor
+++ b/WebLucky_Client/App.razor
@@ -6,7 +6,8 @@
                     <p>Please wait, we are authorizring the user!</p>
                 </Authorizing>
                 <NotAuthorized>
-                    <p>Not authorized!</p>
+                    <WebLucky_Client.Pages.Authentication.RedirectToLogin>
+                    </WebLucky_Client.Pages.Authentication.RedirectToLogin>
                 </NotAuthorized>
             </AuthorizeRouteView>
             <FocusOnNavigate RouteData="@routeData" Selector="h1" />
