--- a/WebLucky_Client/Pages/CartDetails/Summary.razor
+++ b/WebLucky_Client/Pages/CartDetails/Summary.razor
@@ -1,8 +1,9 @@
 ﻿@page "/summary"
 @attribute [Authorize]
 @inject IJSRuntime _jsRuntime
-@inject ILocalStorageService _localStorage
+@inject IOrderService _orderService
 @inject IProductService _productService
+@inject ILocalStorageService _localStorage
 
 @if (IsProcessing)
 {
@@ -137,10 +138,30 @@ else
             Order.OrderDetails.Add(orderDetailDTO);
             Order.OrderHeader.OrderTotal += (orderDetailDTO.Count * orderDetailDTO.Price);
         }
+        if (await _localStorage.GetItemAsync<UserDTO>(SD.Local_UserDetails) != null)
+        {
+            var userInfo = await _localStorage.GetItemAsync<UserDTO>(SD.Local_UserDetails);
+            Order.OrderHeader.UserId = userInfo.Id;
+            Order.OrderHeader.Name = userInfo.Name;
+            Order.OrderHeader.Email = userInfo.Email;
+            Order.OrderHeader.PhoneNumber = userInfo.PhoneNumber;
+        }
         IsProcessing = false;
     }
     private async Task HandleCheckout()
     {
-
+        try
+        {
+            var paymentDto = new StripePaymentDTO()
+            {
+                Order = Order
+            };
+            var orderHeaderSaved = await _orderService.Create(paymentDto);
+            await _jsRuntime.ToastrSuccess("บันทึกสำเร็จ");
+        }
+        catch (Exception e)
+        {
+            await _jsRuntime.ToastrError(e.Message);
+        }
     }
 }
