--- a/WebLucky_Client/Pages/CartDetails/Summary.razor
+++ b/WebLucky_Client/Pages/CartDetails/Summary.razor
@@ -3,6 +3,7 @@
 @inject IJSRuntime _jsRuntime
 @inject IOrderService _orderService
 @inject IProductService _productService
+@inject IPaymentService _paymentService
 @inject ILocalStorageService _localStorage
 
 @if (IsProcessing)
@@ -156,7 +157,11 @@ else
             {
                 Order = Order
             };
-            var orderHeaderSaved = await _orderService.Create(paymentDto);
+            var result = await _paymentService.Checkout(paymentDto);
+            Order.OrderHeader.SessionId = result.Data.ToString();
+            var orderDTOSaved = await _orderService.Create(paymentDto);
+            await _localStorage.SetItemAsync(SD.Local_OrderDetails, orderDTOSaved);
+            await _jsRuntime.InvokeVoidAsync("redirectToCheckout", result.Data.ToString());
             await _jsRuntime.ToastrSuccess("บันทึกสำเร็จ");
         }
         catch (Exception e)
