--- a/WebLucky_Client/Pages/CartDetails/Summary.razor
+++ b/WebLucky_Client/Pages/CartDetails/Summary.razor
@@ -153,6 +153,7 @@ else
     {
         try
         {
+            IsProcessing = true;
             var paymentDto = new StripePaymentDTO()
             {
                 Order = Order
