--- a/WebLucky_Serwer/Pages/LearnBlazor/ToastComponent.razor
+++ b/WebLucky_Serwer/Pages/LearnBlazor/ToastComponent.razor
@@ -1,7 +1,7 @@
 ﻿@page "/LearnBlazor/ToastComponent"
 @inject ISnackbar SnackbarService
 
-<MudButton Variant="Variant.Filled" Color="Color.Primary" OnClick="@OnClick">Prevent duplicate Snackbars</MudButton>
+<MudButton Variant="MudBlazor.Variant.Filled" Color="Color.Primary" OnClick="@OnClick">Prevent duplicate Snackbars</MudButton>
 
 @code {
     private void OnClick()
