--- a/WebLucky_Serwer/Shared/_DeleteConfirmation.razor
+++ b/WebLucky_Serwer/Shared/_DeleteConfirmation.razor
@@ -16,14 +16,14 @@
     </div>
 </div> *@
 
-<MudButton Variant="Variant.Filled" Color="Color.Error" OnClick="OnButtonClicked">Delete</MudButton>
+<MudButton Variant="MudBlazor.Variant.Filled" Color="Color.Error" OnClick="OnButtonClicked">Delete</MudButton>
 <div>
     <MudMessageBox @ref="mbox" Title="Warning" CancelText="Cancel">
         <MessageContent>
             Deleting can <b><i>not</i></b> be undone!
         </MessageContent>
         <YesButton>
-            <MudButton Variant="Variant.Filled" Color="Color.Error" StartIcon="@Icons.Material.Filled.DeleteForever">Delete!</MudButton>
+            <MudButton Variant="MudBlazor.Variant.Filled" Color="Color.Error" StartIcon="@Icons.Material.Filled.DeleteForever">Delete!</MudButton>
         </YesButton>
     </MudMessageBox>
 </div>
