Payment Intent ID

--- a/WebLucky_Client/Pages/CartDetails/OrderConfirmation.razor
+++ b/WebLucky_Client/Pages/CartDetails/OrderConfirmation.razor
@@ -46,18 +46,13 @@
     {
         IsProcessing = true;
         Order = await _localStorage.GetItemAsync<OrderDTO>(SD.Local_OrderDetails);
-        //add logic to check payment and update status
-
-        //เรียกเซอร์วิสเพื่อส่งต่อไปยัง Order API เพื่อไปเปลี่ยนสถานะจาก Pending เป็น Confirmed
         var updatedOrder = await _orderService.MarkPaymentSuccessful(Order.OrderHeader);
-
-        //ถ้ายืนยันเรียบร้อย ให้ลบตะกร้าและออเดอร์ที่ชำระเงินจาก stripe ใน storage
         if (updatedOrder.Status == SD.Status_Confirmed)
         {
+            Order.OrderHeader.Status = updatedOrder.Status;
             await _localStorage.RemoveItemAsync(SD.ShoppingCart);
             await _localStorage.RemoveItemAsync(SD.Local_OrderDetails);
         }
-
         IsProcessing = false;
     }
 }
